# AICamera

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/facebook/f8demo/: ClassifyCamera.java
